# Klarinet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml  release.yml
demo/: build.gradle.kts
demo-native/: build.gradle.kts
demo-native/src/linuxX64Main/kotlin/: Main.kt
demo-native/src/mingwX64Main/kotlin/: Main.kt
demo/gradle/wrapper/: gradle-wrapper.properties
demo/src/androidMain/: AndroidManifest.xml
demo/src/androidMain/kotlin/com/vectencia/klarinet/: MainActivity.kt
demo/src/androidMain/kotlin/com/vectencia/koboe/: MainActivity.kt
demo/src/androidMain/res/values/: strings.xml
demo/src/commonMain/kotlin/com/vectencia/klarinet/: App.kt
demo/src/commonMain/kotlin/com/vectencia/koboe/: App.kt
demo/src/commonTest/kotlin/com/vectencia/klarinet/: ComposeAppCommonTest.kt
demo/src/commonTest/kotlin/com/vectencia/koboe/: ComposeAppCommonTest.kt
demo/src/desktopMain/kotlin/com/vectencia/klarinet/: Main.kt
demo/src/iosMain/kotlin/com/vectencia/klarinet/: MainViewController.kt
demo/src/iosMain/kotlin/com/vectencia/koboe/: MainViewController.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/SwiftUIDemo/: SwiftUIDemoView.swift
iosApp/iosApp/SwiftUIDemo/Effects/: EffectsView.swift  EffectsViewModel.swift
iosApp/iosApp/SwiftUIDemo/FilePlayer/: FilePlayerView.swift  FilePlayerViewModel.swift
iosApp/iosApp/SwiftUIDemo/Latency/: LatencyView.swift  LatencyViewModel.swift
iosApp/iosApp/SwiftUIDemo/MicMeter/: MicMeterView.swift  MicMeterViewModel.swift
iosApp/iosApp/SwiftUIDemo/ToneGenerator/: ToneGeneratorView.swift  ToneGeneratorViewModel.swift
iosApp/tvosApp/: ToneGeneratorView.swift  TvosApp.swift
iosApp/watchosApp/: ToneGeneratorView.swift  ToneGeneratorViewModel.swift  WatchosApp.swift
klarinet/: build.gradle.kts  gradle.properties
klarinet-coroutines/: build.gradle.kts
klarinet/src/androidInstrumentedTest/kotlin/com/vectencia/klarinet/: AndroidAudioEngineTest.kt
klarinet/src/androidMain/cpp/: CMakeLists.txt  KlarinetCallback.cpp  KlarinetCallback.h  KlarinetEngine.cpp  KlarinetEngine.h  klarinet_jni.cpp
klarinet/src/androidMain/kotlin/com/vectencia/klarinet/: AudioEffect.android.kt  AudioEffectChain.android.kt  AudioEngine.android.kt  AudioFileReader.android.kt  AudioFileWriter.android.kt  AudioSessionManager.android.kt  AudioStream.android.kt  JniBridge.kt
klarinet/src/appleMain/kotlin/com/vectencia/klarinet/: AudioEffect.apple.kt  AudioEffectChain.apple.kt  AudioEngine.apple.kt  AudioFileReader.apple.kt  AudioFileWriter.apple.kt  AudioSessionManager.apple.kt  AudioStream.apple.kt  PlatformAudioSession.kt
klarinet/src/commonMain/kotlin/com/vectencia/klarinet/: AtomicFloat.kt  AudioAnalysisResult.kt  AudioAnalyzer.kt  AudioDeviceInfo.kt  AudioEffect.kt  AudioEffectChain.kt  AudioEffectParams.kt  AudioEffectType.kt  AudioEngine.kt  AudioEngineFileExtensions.kt  AudioFileFormat.kt  AudioFileInfo.kt  AudioFileReader.kt  AudioFileTags.kt  AudioFileWriter.kt  AudioMath.kt  (+16 more)
klarinet/src/cpp/dsp/: AudioEffect.cpp  AudioEffect.h  CMakeLists.txt  EffectChain.cpp  EffectChain.h  EffectFactory.cpp  EffectFactory.h  RingBuffer.h  klarinet_dsp.cpp  klarinet_dsp.h
klarinet/src/cpp/dsp/effects/: BandPassFilter.cpp  BandPassFilter.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Flanger.cpp  Flanger.h  Gain.cpp  Gain.h  HighPassFilter.cpp  HighPassFilter.h  Limiter.cpp  Limiter.h  LowPassFilter.cpp  LowPassFilter.h  MuteSolo.cpp  MuteSolo.h  NoiseGate.cpp  NoiseGate.h  Pan.cpp  Pan.h  ParametricEQ.cpp  ParametricEQ.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  Tremolo.cpp  Tremolo.h
klarinet/src/cpp/dsp/primitives/: Biquad.cpp  Biquad.h  CircularBuffer.cpp  CircularBuffer.h  EnvelopeFollower.cpp  EnvelopeFollower.h  LFO.cpp  LFO.h
klarinet/src/cpp/dsp/tests/: CMakeLists.txt  test_compressor.cpp  test_delay.cpp  test_effect_chain.cpp  test_filters.cpp  test_gain.cpp  test_modulation.cpp  test_pan.cpp  test_primitives.cpp  test_reverb.cpp  test_ring_buffer.cpp
klarinet/src/jvmMain/cpp/: CMakeLists.txt  klarinet_jvm.c
klarinet/src/jvmMain/resources/natives/macos-arm64/: libklarinet_jvm.dylib
klarinet/src/nativeInterop/cinterop/: CMakeLists.txt  klarinet_dsp.def  klarinet_native.c  klarinet_native.def  klarinet_native.h
koboe/: build.gradle.kts  gradle.properties
koboe/src/androidMain/cpp/: CMakeLists.txt  KoboeCallback.cpp  KoboeCallback.h  KoboeEngine.cpp  KoboeEngine.h  koboe_jni.cpp
scripts/: build-apple-dsp.sh
(+124 files in other folders)
